Added in the ability to use objs that aren't in application execution directory; configured and modified to target .NET 3.5

--- a/source/CjClutter.ObjLoader.Loader/CjClutter.ObjLoader.Loader.csproj
+++ b/source/CjClutter.ObjLoader.Loader/CjClutter.ObjLoader.Loader.csproj
@@ -10,8 +10,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ObjLoader.Loader</RootNamespace>
     <AssemblyName>CjClutter.ObjLoader.Loader</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -41,14 +42,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\ContextInfo.cs" />
     <Compile Include="Data\DataStore\DataStore.cs" />
     <Compile Include="Data\Elements\Face.cs" />
     <Compile Include="Data\DataStore\IElementGroup.cs" />
